--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio for Assignment</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h3>Rohan.M</h3>
+    <header>
+        <div class="rohan-r">
+            <h3>Rohan.R</h3>
+            <button><a href="">Download Resume</a></button>
+        </div>
+    </header>
+    <body>
+        
+    </body>
+    <footer></footer>
 </body>
 </html>
