hero-section-added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio for Assignment</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -14,7 +17,33 @@
         </div>
     </header>
     <body>
+        <div class="hero-section">
+            <div class="hero-banner">
+                <img class="margin" src="./assets/Group.png" alt="">
+            </div>
+            <div class="hero-content text-center">
+                <h1 class="margin">"I hope to become a great Developer, in the near future."</h1>
+                <p class="margin">Challenges are inevitable. Instead of viewing them as obstacles, see them as opportunities to learn and grow. I will solve each bug and each problem and i'll make myself a great developer one day in shaa Allah. </p>
+                <button class="margin">Contact with me</button>
+            </div>
+        </div>
+
+        <div class="why-development text-center">
+            <h2>Why Web Development?</h2>
+            <p>Web development offers creativity, job flexibility, high demand, continuous learning, problem-solving skills, global opportunities, good income potential, and the ability to build impactful digital solutions.</p>
+        </div>
+       <div class="second-hero-section">
+       
+        <div class="first-block">
+            <h4>I will Do Coding and Change The World</h4>
+            <p>Most importantly, believe in yourself. You have the potential to become a great web developer. Stay confident, keep pushing forward, and never doubt your abilities.</p>
+            <button><a href="https://www.w3schools.com/">Learn more</a></button>
+        </div>
+        <div>
+            <img src="./assets/Layer_1.png" alt="">
+        </div>
         
+       </div>
     </body>
     <footer></footer>
 </body>
