--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             </div>
         </div>
 
-        <div class="why-development text-center ">
+        <div class="development-target-section text-center ">
             <h2 class="margin">Why Web Development?</h2>
             <p class="margin">Web development offers creativity, job flexibility, high demand, continuous learning, problem-solving skills, global opportunities, good income potential, and the ability to build impactful digital solutions.</p>
         </div>
        <div class="second-hero-section1">
         <div class="first-block width">
-            <h4>I will Do Coding and Change The World</h4>
+            <h4 class="h4-margin">I will Do Coding and Change The World</h4>
             <p>Most importantly, believe in yourself. You have the potential to become a great web developer. Stay confident, keep pushing forward, and never doubt your abilities.</p>
             <button class="button-design"><a class="second-hero-a" href="https://www.w3schools.com/" target="_blank">Learn more</a></button>
         </div>
@@ -45,18 +45,30 @@
        <div class="second-hero-section2">
         <div class="width"><img src="./assets/Group 3.png" alt="error"></div>
         <div class="second-block width">
-            <h4>I will help People by creating Modern Web System</h4>
+            <h4 class="h4-margin">I will help People by creating Modern Web System</h4>
             <p>Modern websites blend sleek design with user-friendly interfaces, ensuring a seamless experience across all devices. Accessibility and speed are key</p>
             <button class="button-design"><a class="second-hero-a" href="https://www.w3schools.com/typescript/index.php">Learn more</a></button>
         </div>
        </div>
        <div class="second-hero-section3">
         <div class="third-block width">
-            <h4>I will Do Coding and Change The World</h4>
+            <h4 class="h4-margin">I will Do Coding and Change The World</h4>
             <p>Modern websites prioritize sleek design, user-friendly interfaces, accessibility, and speed for optimal user experience</p>
             <button class="button-design"><a class="second-hero-a" href="https://www.w3schools.com/w3css/w3css_templates.asp">Learn more</a></button>
         </div>
         <div class="width"><img src="./assets/Group 4.png" alt="error"></div>
+       </div>
+       <div class="third-hero-section">
+        <h4>My Inspiration</h4>
+        <p>Passion for creativity, solving problems, and crafting user-friendly experiences inspires my web development journey.</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/nSClTQE7K6s?si=94v9wtX1_6HmZbcq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+       </div>
+       <div class="development-target-section text-center">
+        <h4 class="margin">My Current Target</h4>
+        <p>Learning HTML, CSS, and JavaScript unlocks the power to create dynamic, visually appealing, and interactive websites from scratch.</p>
+       </div>
+       <div class="forth-hero-section">
+        
        </div>
     </body>
     <footer></footer>
