sixth-section added

--- a/index.html
+++ b/index.html
@@ -68,7 +68,30 @@
         <p>Learning HTML, CSS, and JavaScript unlocks the power to create dynamic, visually appealing, and interactive websites from scratch.</p>
        </div>
        <div class="forth-hero-section">
-        
+        <div class="forth-one">
+            <img src="./assets/html.png" alt="error">
+            <h4 class="h4-margin">HTML</h4>
+            <p>HTML, or HyperText Markup Language, structures web content, defining elements like headings, paragraphs, links, and images for browsers.</p>
+            <a href="https://stackoverflow.com/">Learn more</a>
+        </div>
+        <div class="forth-two">
+            <img src="./assets/css.png" alt="error">
+            <h4 class="h4-margin">CSS</h4>
+            <p>CSS styles web pages, enhancing layout, colors, and fonts, making sites visually appealing and improving user experience</p>
+            <a href="https://developer.mozilla.org/en-US/">Learn more</a>
+        </div>
+        <div class="forth-third">
+            <img src="./assets/js.png" alt="">
+            <h4 class="h4-margin">JavaScript</h4>
+            <p>JavaScript enhances web pages by adding interactivity, enabling dynamic content, and improving user experiences across all devices</p>
+            <a class="" href="https://fonts.google.com/">Learn more</a>
+        </div>
+       </div>
+       <div class="sixth-hero-section text-center">
+        <h4 class="h4-margin">I need Support</h4>
+        <p>The support section of a website offers essential assistance, including FAQs, live chat, and contact forms, ensuring users receive timely help and enhancing overall satisfaction and usability.</p>
+        <input type="text" placeholder="Suggest me any Feedback about my Website " name="" id=""> 
+        <input type="button" value="Submit" name="" id="">
        </div>
     </body>
     <footer></footer>
