--- a/index.html
+++ b/index.html
@@ -94,6 +94,17 @@
         <input type="button" value="Submit" name="" id="">
        </div>
     </body>
-    <footer></footer>
+    <footer>
+       <div class="last-section">
+        <div class="text">
+            <h4>An Open Commitment by Rohan Rahman</h4>
+        </div>
+        <div class="img">
+            <img src="./assets/linkedin-icon 1.png" alt="error">
+            <img src="./assets/github.png" alt="error">
+            <img src="./assets/facebook.png" alt="">
+        </div>
+       </div>
+    </footer>
 </body>
 </html>
