--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="hero-content text-center">
                 <h1 class="margin">"I hope to become a great Developer, in the near future."</h1>
                 <p class="margin">Challenges are inevitable. Instead of viewing them as obstacles, see them as opportunities to learn and grow. I will solve each bug and each problem and i'll make myself a great developer one day in shaa Allah. </p>
-                <button class="margin">Contact with me</button>
+                <button class="margin"><a href="#contact">Contact with me</a></button>
             </div>
         </div>
 
@@ -94,15 +94,15 @@
         <input type="button" value="Submit" name="" id="">
        </div>
     </body>
-    <footer>
+    <footer id="contact">
        <div class="last-section">
         <div class="text">
             <h4>An Open Commitment by Rohan Rahman</h4>
         </div>
         <div class="img">
-            <img src="./assets/linkedin-icon 1.png" alt="error">
-            <img src="./assets/github.png" alt="error">
-            <img src="./assets/facebook.png" alt="">
+            <a href="https://bd.linkedin.com/company/programminghero" target="_blank"><img src="./assets/linkedin-icon 1.png" alt="error"></a>
+            <a href="https://github.com/ProgrammingHero1" target="_blank"><img src="./assets/github.png" alt="error"></a>
+            <a href="https://www.facebook.com/programmingHero/" target="_blank"><img src="./assets/facebook.png" alt=""></a>
         </div>
        </div>
     </footer>
