--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
        <div class="third-hero-section">
         <h4>My Inspiration</h4>
         <p>Passion for creativity, solving problems, and crafting user-friendly experiences inspires my web development journey.</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/nSClTQE7K6s?si=Fmg5Lujnr6oiuXmP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div class="vdo">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/nSClTQE7K6s?si=Fmg5Lujnr6oiuXmP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
        </div>
        <div class="development-target-section text-center">
         <h4 class="margin">My Current Target</h4>
