--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
         <div class="forth-one">
             <img src="./assets/html.png" alt="error">
             <h4 class="h4-margin">HTML</h4>
-            <p>HTML, or HyperText Markup Language, structures web content, defining elements like headings, paragraphs, links, and images for browsers.</p>
+            <p class="margin-p">HTML, or HyperText Markup Language, structures web content, defining elements like headings, paragraphs, links, and images for browsers.</p>
             <a href="https://stackoverflow.com/">Learn more</a>
         </div>
         <div class="forth-two">
             <img src="./assets/css.png" alt="error">
             <h4 class="h4-margin">CSS</h4>
-            <p>CSS styles web pages, enhancing layout, colors, and fonts, making sites visually appealing and improving user experience</p>
+            <p class="margin-p">CSS styles web pages, enhancing layout, colors, and fonts, making sites visually appealing and improving user experience</p>
             <a href="https://developer.mozilla.org/en-US/">Learn more</a>
         </div>
         <div class="forth-third">
             <img src="./assets/js.png" alt="">
             <h4 class="h4-margin">JavaScript</h4>
-            <p>JavaScript enhances web pages by adding interactivity, enabling dynamic content, and improving user experiences across all devices</p>
+            <p class="margin-p">JavaScript enhances web pages by adding interactivity, enabling dynamic content, and improving user experiences across all devices</p>
             <a class="" href="https://fonts.google.com/">Learn more</a>
         </div>
        </div>
