--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="bg-color">
             <div class="development-target-section text-center ">
-                <h2 class="margin">Why Web Development?</h2>
+                <h2 class="margin size">Why Web Development?</h2>
                 <p class="margin">Web development offers creativity, job flexibility, high demand, continuous learning, problem-solving skills, global opportunities, good income potential, and the ability to build impactful digital solutions.</p>
             </div>
            <div class="second-hero-section1">
@@ -61,14 +61,14 @@
         </div>
         
        <div class="third-hero-section">
-        <h4>My Inspiration</h4>
+        <h4 class="size">My Inspiration</h4>
         <p>Passion for creativity, solving problems, and crafting user-friendly experiences inspires my web development journey.</p>
         <div class="vdo">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/nSClTQE7K6s?si=Fmg5Lujnr6oiuXmP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
        </div>
        <div class="development-target-section text-center">
-        <h4 class="margin">My Current Target</h4>
+        <h4 class="margin size">My Current Target</h4>
         <p>Learning HTML, CSS, and JavaScript unlocks the power to create dynamic, visually appealing, and interactive websites from scratch.</p>
        </div>
        <div class="forth-hero-section">
